--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Karan Goel",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "ejs-locals": "^1.0.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.10.3",
+    "nodemon": "^1.11.0",
+    "path": "^0.12.7"
   }
 }
