--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Karan Goel",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.15.3",
+    "google-images": "^2.1.0",
     "mongoose": "^4.10.3",
+    "node-google-image-search": "^1.0.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
   }
